--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+pip==24.3.1
 pycaret==2.3.10
 streamlit==1.5.0
 pandas-profiling==3.1.0
 joblib==1.1.0
 pandas==1.3.3
-scikit-learn==0.24.2
+scikit-learn==0.23.2
 numpy==1.19.5
 scipy==1.5.4
+setuptools
