--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 pip==24.3.1
+setuptools>=51.0.0
+wheel
 pycaret==2.3.10
 streamlit==1.5.0
 pandas-profiling==3.1.0
@@ -7,4 +9,3 @@ pandas==1.3.3
 scikit-learn==0.23.2
 numpy==1.19.5
 scipy==1.5.4
-setuptools
