--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pip==24.3.1
-setuptools>=51.0.0
+setuptools==58.0.4
 wheel
 pycaret==2.3.10
 streamlit==1.5.0
@@ -7,5 +7,5 @@ pandas-profiling==3.1.0
 joblib==1.1.0
 pandas==1.3.3
 scikit-learn==0.23.2
-numpy==1.19.5
-scipy==1.5.4
+numpy==1.19.3
+scipy==1.5.2
